order-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 8090
          - path: /items
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8091
